--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"howler": "^2.2.3"
+	}
 }
